--- a/README
+++ b/README
@@ -12,43 +12,42 @@ methods are also specified in XML providing the ability to modify
 existing access methods and create new ones.
 
 Runtime requirements:
-  cygwin-1.7.0-45
-  libatk1.0_0-1.26.0-1
-  libbonobo2_0-2.24.0-1
-  libesd0-0.2.41-1
-  libgcc1-4.3.2-2
-  libgconf2_4-2.26.0-1
-  libgdk_pixbuf2.0_0-2.16.1-1
+  cygwin-1.7.0-62
+  libatk1.0_0-1.28.0-1
+  libbonobo2_0-2.24.2-1
+  libcanberra-gtk0-0.22-1
+  libcanberra0-0.22-1
+  libdbus-glib_1_2-0.80-10
+  libgcc1-4.3.4-1
+  libgconf2_4-2.28.0-1
+  libgdk_pixbuf2.0_0-2.18.3-1
   libglade2.0_0-2.6.4-1
-  libglib2.0_0-2.20.1-1
-  libgnome2_0-2.26.0-1
+  libglib2.0_0-2.22.2-1
   libgnomespeech7-0.4.25-1
-  libgnomeui2_0-2.24.1-1
-  libgtk2.0_0-2.16.1-1
-  libintl8-0.17-10
+  libgtk2.0_0-2.18.3-1
+  libintl8-0.17-11
   libORBit2_0-2.14.17-1
-  libpango1.0_0-1.24.1-1
-  libspi0-1.26.0-1
-  libwnck1_22-2.26.0-1
-  libX11_6-1.2-10
-  libXi6-1.2.1-10
-  libxml2-2.7.3-10
+  libpango1.0_0-1.26.0-1
+  libspi0-1.28.1-1
+  libwnck1_22-2.28.0-1
+  libX11_6-1.3.2-1
+  libXi6-1.3-1
+  libxml2-2.7.4-1
 
 Build requirements:
 (besides corresponding -devel packages)
   autoconf2.5-2.63-10
-  automake1.10-1.10.1-10
-  binutils-20080624-2
-  cygport-0.9.6-1
-  gawk-3.1.6-2
-  gcc4-core-4.3.2-2
-  gnome-common-2.26.0-1
+  automake1.11-1.11-10
+  binutils-2.19.51-1
+  cygport-0.9.10-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-1
+  gnome-common-2.28.0-1
   gtk-doc-1.11-2
   intltool-0.40.6-1
-  libtool-2.2.7a-12
+  libtool-2.2.7a-14
   make-3.81-2
   pkg-config-0.23b-10
-  rarian-0.8.1-10
   sed-4.1.5-2
 
 Canonical website:
@@ -60,969 +59,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gok-2.26.0-X-src.tar.bz2
+  unpack gok-2.28.1-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gok-2.26.0-X.cygport all
+  cygport ./gok-2.28.1-X.cygport all
 
 This will create:
-  /usr/src/gok-2.26.0-X-src.tar.bz2
-  /usr/src/gok-2.26.0-X.tar.bz2
+  /usr/src/gok-2.28.1-X-src.tar.bz2
+  /usr/src/gok-2.28.1-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /etc/gconf/schemas/gok.schemas
-  /etc/postinstall/gok.sh
-  /etc/preremove/gok.sh
-  /usr/bin/create-branching-keyboard.exe
-  /usr/bin/gok.exe
-  /usr/lib/bonobo/servers/GNOME_Gok.server
-  /usr/lib/pkgconfig/gok-1.0.pc
-  /usr/share/applications/gok.desktop
-  /usr/share/doc/gok/AUTHORS
-  /usr/share/doc/gok/COPYING
-  /usr/share/doc/gok/ChangeLog
-  /usr/share/doc/gok/NEWS
-  /usr/share/doc/gok/README
-  /usr/share/gnome/help/gok/C/gok.xml
-  /usr/share/gnome/help/gok/C/legal.xml
-  /usr/share/gok/C/gok-controls.kbd
-  /usr/share/gok/C/hide.kbd
-  /usr/share/gok/C/launcher.kbd
-  /usr/share/gok/C/main.kbd
-  /usr/share/gok/C/mouse.kbd
-  /usr/share/gok/C/move-resize.kbd
-  /usr/share/gok/C/numberpad.kbd
-  /usr/share/gok/C/quit.kbd
-  /usr/share/gok/C/text-operations.kbd
-  /usr/share/gok/C/valuator.kbd
-  /usr/share/gok/East.png
-  /usr/share/gok/Keyboard.kbd
-  /usr/share/gok/NE.png
-  /usr/share/gok/NW.png
-  /usr/share/gok/North.png
-  /usr/share/gok/SE.png
-  /usr/share/gok/SW.png
-  /usr/share/gok/South.png
-  /usr/share/gok/West.png
-  /usr/share/gok/am/gok-controls.kbd
-  /usr/share/gok/am/hide.kbd
-  /usr/share/gok/am/launcher.kbd
-  /usr/share/gok/am/main.kbd
-  /usr/share/gok/am/mouse.kbd
-  /usr/share/gok/am/move-resize.kbd
-  /usr/share/gok/am/numberpad.kbd
-  /usr/share/gok/am/quit.kbd
-  /usr/share/gok/am/text-operations.kbd
-  /usr/share/gok/am/valuator.kbd
-  /usr/share/gok/ang/gok-controls.kbd
-  /usr/share/gok/ang/hide.kbd
-  /usr/share/gok/ang/launcher.kbd
-  /usr/share/gok/ang/main.kbd
-  /usr/share/gok/ang/mouse.kbd
-  /usr/share/gok/ang/move-resize.kbd
-  /usr/share/gok/ang/numberpad.kbd
-  /usr/share/gok/ang/quit.kbd
-  /usr/share/gok/ang/text-operations.kbd
-  /usr/share/gok/ang/valuator.kbd
-  /usr/share/gok/ar/gok-controls.kbd
-  /usr/share/gok/ar/hide.kbd
-  /usr/share/gok/ar/launcher.kbd
-  /usr/share/gok/ar/main.kbd
-  /usr/share/gok/ar/mouse.kbd
-  /usr/share/gok/ar/move-resize.kbd
-  /usr/share/gok/ar/numberpad.kbd
-  /usr/share/gok/ar/quit.kbd
-  /usr/share/gok/ar/text-operations.kbd
-  /usr/share/gok/ar/valuator.kbd
-  /usr/share/gok/as/gok-controls.kbd
-  /usr/share/gok/as/hide.kbd
-  /usr/share/gok/as/launcher.kbd
-  /usr/share/gok/as/main.kbd
-  /usr/share/gok/as/mouse.kbd
-  /usr/share/gok/as/move-resize.kbd
-  /usr/share/gok/as/numberpad.kbd
-  /usr/share/gok/as/quit.kbd
-  /usr/share/gok/as/text-operations.kbd
-  /usr/share/gok/as/valuator.kbd
-  /usr/share/gok/automatic-scanning.xam
-  /usr/share/gok/az/gok-controls.kbd
-  /usr/share/gok/az/hide.kbd
-  /usr/share/gok/az/launcher.kbd
-  /usr/share/gok/az/main.kbd
-  /usr/share/gok/az/mouse.kbd
-  /usr/share/gok/az/move-resize.kbd
-  /usr/share/gok/az/numberpad.kbd
-  /usr/share/gok/az/quit.kbd
-  /usr/share/gok/az/text-operations.kbd
-  /usr/share/gok/az/valuator.kbd
-  /usr/share/gok/be/gok-controls.kbd
-  /usr/share/gok/be/hide.kbd
-  /usr/share/gok/be/launcher.kbd
-  /usr/share/gok/be/main.kbd
-  /usr/share/gok/be/mouse.kbd
-  /usr/share/gok/be/move-resize.kbd
-  /usr/share/gok/be/numberpad.kbd
-  /usr/share/gok/be/quit.kbd
-  /usr/share/gok/be/text-operations.kbd
-  /usr/share/gok/be/valuator.kbd
-  /usr/share/gok/bg/gok-controls.kbd
-  /usr/share/gok/bg/hide.kbd
-  /usr/share/gok/bg/launcher.kbd
-  /usr/share/gok/bg/main.kbd
-  /usr/share/gok/bg/mouse.kbd
-  /usr/share/gok/bg/move-resize.kbd
-  /usr/share/gok/bg/numberpad.kbd
-  /usr/share/gok/bg/quit.kbd
-  /usr/share/gok/bg/text-operations.kbd
-  /usr/share/gok/bg/valuator.kbd
-  /usr/share/gok/bn/gok-controls.kbd
-  /usr/share/gok/bn/hide.kbd
-  /usr/share/gok/bn/launcher.kbd
-  /usr/share/gok/bn/main.kbd
-  /usr/share/gok/bn/mouse.kbd
-  /usr/share/gok/bn/move-resize.kbd
-  /usr/share/gok/bn/numberpad.kbd
-  /usr/share/gok/bn/quit.kbd
-  /usr/share/gok/bn/text-operations.kbd
-  /usr/share/gok/bn/valuator.kbd
-  /usr/share/gok/bn_IN/gok-controls.kbd
-  /usr/share/gok/bn_IN/hide.kbd
-  /usr/share/gok/bn_IN/launcher.kbd
-  /usr/share/gok/bn_IN/main.kbd
-  /usr/share/gok/bn_IN/mouse.kbd
-  /usr/share/gok/bn_IN/move-resize.kbd
-  /usr/share/gok/bn_IN/numberpad.kbd
-  /usr/share/gok/bn_IN/quit.kbd
-  /usr/share/gok/bn_IN/text-operations.kbd
-  /usr/share/gok/bn_IN/valuator.kbd
-  /usr/share/gok/ca/gok-controls.kbd
-  /usr/share/gok/ca/hide.kbd
-  /usr/share/gok/ca/launcher.kbd
-  /usr/share/gok/ca/main.kbd
-  /usr/share/gok/ca/mouse.kbd
-  /usr/share/gok/ca/move-resize.kbd
-  /usr/share/gok/ca/numberpad.kbd
-  /usr/share/gok/ca/quit.kbd
-  /usr/share/gok/ca/text-operations.kbd
-  /usr/share/gok/ca/valuator.kbd
-  /usr/share/gok/cs/gok-controls.kbd
-  /usr/share/gok/cs/hide.kbd
-  /usr/share/gok/cs/launcher.kbd
-  /usr/share/gok/cs/main.kbd
-  /usr/share/gok/cs/mouse.kbd
-  /usr/share/gok/cs/move-resize.kbd
-  /usr/share/gok/cs/numberpad.kbd
-  /usr/share/gok/cs/quit.kbd
-  /usr/share/gok/cs/text-operations.kbd
-  /usr/share/gok/cs/valuator.kbd
-  /usr/share/gok/cy/gok-controls.kbd
-  /usr/share/gok/cy/hide.kbd
-  /usr/share/gok/cy/launcher.kbd
-  /usr/share/gok/cy/main.kbd
-  /usr/share/gok/cy/mouse.kbd
-  /usr/share/gok/cy/move-resize.kbd
-  /usr/share/gok/cy/numberpad.kbd
-  /usr/share/gok/cy/quit.kbd
-  /usr/share/gok/cy/text-operations.kbd
-  /usr/share/gok/cy/valuator.kbd
-  /usr/share/gok/da/gok-controls.kbd
-  /usr/share/gok/da/hide.kbd
-  /usr/share/gok/da/launcher.kbd
-  /usr/share/gok/da/main.kbd
-  /usr/share/gok/da/mouse.kbd
-  /usr/share/gok/da/move-resize.kbd
-  /usr/share/gok/da/numberpad.kbd
-  /usr/share/gok/da/quit.kbd
-  /usr/share/gok/da/text-operations.kbd
-  /usr/share/gok/da/valuator.kbd
-  /usr/share/gok/de/gok-controls.kbd
-  /usr/share/gok/de/hide.kbd
-  /usr/share/gok/de/launcher.kbd
-  /usr/share/gok/de/main.kbd
-  /usr/share/gok/de/mouse.kbd
-  /usr/share/gok/de/move-resize.kbd
-  /usr/share/gok/de/numberpad.kbd
-  /usr/share/gok/de/quit.kbd
-  /usr/share/gok/de/text-operations.kbd
-  /usr/share/gok/de/valuator.kbd
-  /usr/share/gok/dictionary.txt
-  /usr/share/gok/direct-selection.xam
-  /usr/share/gok/directed.xam
-  /usr/share/gok/dwell-selection.xam
-  /usr/share/gok/dz/gok-controls.kbd
-  /usr/share/gok/dz/hide.kbd
-  /usr/share/gok/dz/launcher.kbd
-  /usr/share/gok/dz/main.kbd
-  /usr/share/gok/dz/mouse.kbd
-  /usr/share/gok/dz/move-resize.kbd
-  /usr/share/gok/dz/numberpad.kbd
-  /usr/share/gok/dz/quit.kbd
-  /usr/share/gok/dz/text-operations.kbd
-  /usr/share/gok/dz/valuator.kbd
-  /usr/share/gok/el/gok-controls.kbd
-  /usr/share/gok/el/hide.kbd
-  /usr/share/gok/el/launcher.kbd
-  /usr/share/gok/el/main.kbd
-  /usr/share/gok/el/mouse.kbd
-  /usr/share/gok/el/move-resize.kbd
-  /usr/share/gok/el/numberpad.kbd
-  /usr/share/gok/el/quit.kbd
-  /usr/share/gok/el/text-operations.kbd
-  /usr/share/gok/el/valuator.kbd
-  /usr/share/gok/empty.png
-  /usr/share/gok/en_CA/gok-controls.kbd
-  /usr/share/gok/en_CA/hide.kbd
-  /usr/share/gok/en_CA/launcher.kbd
-  /usr/share/gok/en_CA/main.kbd
-  /usr/share/gok/en_CA/mouse.kbd
-  /usr/share/gok/en_CA/move-resize.kbd
-  /usr/share/gok/en_CA/numberpad.kbd
-  /usr/share/gok/en_CA/quit.kbd
-  /usr/share/gok/en_CA/text-operations.kbd
-  /usr/share/gok/en_CA/valuator.kbd
-  /usr/share/gok/en_GB/gok-controls.kbd
-  /usr/share/gok/en_GB/hide.kbd
-  /usr/share/gok/en_GB/launcher.kbd
-  /usr/share/gok/en_GB/main.kbd
-  /usr/share/gok/en_GB/mouse.kbd
-  /usr/share/gok/en_GB/move-resize.kbd
-  /usr/share/gok/en_GB/numberpad.kbd
-  /usr/share/gok/en_GB/quit.kbd
-  /usr/share/gok/en_GB/text-operations.kbd
-  /usr/share/gok/en_GB/valuator.kbd
-  /usr/share/gok/es/gok-controls.kbd
-  /usr/share/gok/es/hide.kbd
-  /usr/share/gok/es/launcher.kbd
-  /usr/share/gok/es/main.kbd
-  /usr/share/gok/es/mouse.kbd
-  /usr/share/gok/es/move-resize.kbd
-  /usr/share/gok/es/numberpad.kbd
-  /usr/share/gok/es/quit.kbd
-  /usr/share/gok/es/text-operations.kbd
-  /usr/share/gok/es/valuator.kbd
-  /usr/share/gok/et/gok-controls.kbd
-  /usr/share/gok/et/hide.kbd
-  /usr/share/gok/et/launcher.kbd
-  /usr/share/gok/et/main.kbd
-  /usr/share/gok/et/mouse.kbd
-  /usr/share/gok/et/move-resize.kbd
-  /usr/share/gok/et/numberpad.kbd
-  /usr/share/gok/et/quit.kbd
-  /usr/share/gok/et/text-operations.kbd
-  /usr/share/gok/et/valuator.kbd
-  /usr/share/gok/eu/gok-controls.kbd
-  /usr/share/gok/eu/hide.kbd
-  /usr/share/gok/eu/launcher.kbd
-  /usr/share/gok/eu/main.kbd
-  /usr/share/gok/eu/mouse.kbd
-  /usr/share/gok/eu/move-resize.kbd
-  /usr/share/gok/eu/numberpad.kbd
-  /usr/share/gok/eu/quit.kbd
-  /usr/share/gok/eu/text-operations.kbd
-  /usr/share/gok/eu/valuator.kbd
-  /usr/share/gok/fa/gok-controls.kbd
-  /usr/share/gok/fa/hide.kbd
-  /usr/share/gok/fa/launcher.kbd
-  /usr/share/gok/fa/main.kbd
-  /usr/share/gok/fa/mouse.kbd
-  /usr/share/gok/fa/move-resize.kbd
-  /usr/share/gok/fa/numberpad.kbd
-  /usr/share/gok/fa/quit.kbd
-  /usr/share/gok/fa/text-operations.kbd
-  /usr/share/gok/fa/valuator.kbd
-  /usr/share/gok/fi/gok-controls.kbd
-  /usr/share/gok/fi/hide.kbd
-  /usr/share/gok/fi/launcher.kbd
-  /usr/share/gok/fi/main.kbd
-  /usr/share/gok/fi/mouse.kbd
-  /usr/share/gok/fi/move-resize.kbd
-  /usr/share/gok/fi/numberpad.kbd
-  /usr/share/gok/fi/quit.kbd
-  /usr/share/gok/fi/text-operations.kbd
-  /usr/share/gok/fi/valuator.kbd
-  /usr/share/gok/fr/gok-controls.kbd
-  /usr/share/gok/fr/hide.kbd
-  /usr/share/gok/fr/launcher.kbd
-  /usr/share/gok/fr/main.kbd
-  /usr/share/gok/fr/mouse.kbd
-  /usr/share/gok/fr/move-resize.kbd
-  /usr/share/gok/fr/numberpad.kbd
-  /usr/share/gok/fr/quit.kbd
-  /usr/share/gok/fr/text-operations.kbd
-  /usr/share/gok/fr/valuator.kbd
-  /usr/share/gok/ga/gok-controls.kbd
-  /usr/share/gok/ga/hide.kbd
-  /usr/share/gok/ga/launcher.kbd
-  /usr/share/gok/ga/main.kbd
-  /usr/share/gok/ga/mouse.kbd
-  /usr/share/gok/ga/move-resize.kbd
-  /usr/share/gok/ga/numberpad.kbd
-  /usr/share/gok/ga/quit.kbd
-  /usr/share/gok/ga/text-operations.kbd
-  /usr/share/gok/ga/valuator.kbd
-  /usr/share/gok/gl/gok-controls.kbd
-  /usr/share/gok/gl/hide.kbd
-  /usr/share/gok/gl/launcher.kbd
-  /usr/share/gok/gl/main.kbd
-  /usr/share/gok/gl/mouse.kbd
-  /usr/share/gok/gl/move-resize.kbd
-  /usr/share/gok/gl/numberpad.kbd
-  /usr/share/gok/gl/quit.kbd
-  /usr/share/gok/gl/text-operations.kbd
-  /usr/share/gok/gl/valuator.kbd
-  /usr/share/gok/glade/gok.glade2
-  /usr/share/gok/gok.rc
-  /usr/share/gok/goklogo.png
-  /usr/share/gok/goksound1.wav
-  /usr/share/gok/goksound2.wav
-  /usr/share/gok/gu/gok-controls.kbd
-  /usr/share/gok/gu/hide.kbd
-  /usr/share/gok/gu/launcher.kbd
-  /usr/share/gok/gu/main.kbd
-  /usr/share/gok/gu/mouse.kbd
-  /usr/share/gok/gu/move-resize.kbd
-  /usr/share/gok/gu/numberpad.kbd
-  /usr/share/gok/gu/quit.kbd
-  /usr/share/gok/gu/text-operations.kbd
-  /usr/share/gok/gu/valuator.kbd
-  /usr/share/gok/he/gok-controls.kbd
-  /usr/share/gok/he/hide.kbd
-  /usr/share/gok/he/launcher.kbd
-  /usr/share/gok/he/main.kbd
-  /usr/share/gok/he/mouse.kbd
-  /usr/share/gok/he/move-resize.kbd
-  /usr/share/gok/he/numberpad.kbd
-  /usr/share/gok/he/quit.kbd
-  /usr/share/gok/he/text-operations.kbd
-  /usr/share/gok/he/valuator.kbd
-  /usr/share/gok/hi/gok-controls.kbd
-  /usr/share/gok/hi/hide.kbd
-  /usr/share/gok/hi/launcher.kbd
-  /usr/share/gok/hi/main.kbd
-  /usr/share/gok/hi/mouse.kbd
-  /usr/share/gok/hi/move-resize.kbd
-  /usr/share/gok/hi/numberpad.kbd
-  /usr/share/gok/hi/quit.kbd
-  /usr/share/gok/hi/text-operations.kbd
-  /usr/share/gok/hi/valuator.kbd
-  /usr/share/gok/hr/gok-controls.kbd
-  /usr/share/gok/hr/hide.kbd
-  /usr/share/gok/hr/launcher.kbd
-  /usr/share/gok/hr/main.kbd
-  /usr/share/gok/hr/mouse.kbd
-  /usr/share/gok/hr/move-resize.kbd
-  /usr/share/gok/hr/numberpad.kbd
-  /usr/share/gok/hr/quit.kbd
-  /usr/share/gok/hr/text-operations.kbd
-  /usr/share/gok/hr/valuator.kbd
-  /usr/share/gok/hu/gok-controls.kbd
-  /usr/share/gok/hu/hide.kbd
-  /usr/share/gok/hu/launcher.kbd
-  /usr/share/gok/hu/main.kbd
-  /usr/share/gok/hu/mouse.kbd
-  /usr/share/gok/hu/move-resize.kbd
-  /usr/share/gok/hu/numberpad.kbd
-  /usr/share/gok/hu/quit.kbd
-  /usr/share/gok/hu/text-operations.kbd
-  /usr/share/gok/hu/valuator.kbd
-  /usr/share/gok/id/gok-controls.kbd
-  /usr/share/gok/id/hide.kbd
-  /usr/share/gok/id/launcher.kbd
-  /usr/share/gok/id/main.kbd
-  /usr/share/gok/id/mouse.kbd
-  /usr/share/gok/id/move-resize.kbd
-  /usr/share/gok/id/numberpad.kbd
-  /usr/share/gok/id/quit.kbd
-  /usr/share/gok/id/text-operations.kbd
-  /usr/share/gok/id/valuator.kbd
-  /usr/share/gok/inverse-scanning.xam
-  /usr/share/gok/it/gok-controls.kbd
-  /usr/share/gok/it/hide.kbd
-  /usr/share/gok/it/launcher.kbd
-  /usr/share/gok/it/main.kbd
-  /usr/share/gok/it/mouse.kbd
-  /usr/share/gok/it/move-resize.kbd
-  /usr/share/gok/it/numberpad.kbd
-  /usr/share/gok/it/quit.kbd
-  /usr/share/gok/it/text-operations.kbd
-  /usr/share/gok/it/valuator.kbd
-  /usr/share/gok/ja/gok-controls.kbd
-  /usr/share/gok/ja/hide.kbd
-  /usr/share/gok/ja/launcher.kbd
-  /usr/share/gok/ja/main.kbd
-  /usr/share/gok/ja/mouse.kbd
-  /usr/share/gok/ja/move-resize.kbd
-  /usr/share/gok/ja/numberpad.kbd
-  /usr/share/gok/ja/quit.kbd
-  /usr/share/gok/ja/text-operations.kbd
-  /usr/share/gok/ja/valuator.kbd
-  /usr/share/gok/ka/gok-controls.kbd
-  /usr/share/gok/ka/hide.kbd
-  /usr/share/gok/ka/launcher.kbd
-  /usr/share/gok/ka/main.kbd
-  /usr/share/gok/ka/mouse.kbd
-  /usr/share/gok/ka/move-resize.kbd
-  /usr/share/gok/ka/numberpad.kbd
-  /usr/share/gok/ka/quit.kbd
-  /usr/share/gok/ka/text-operations.kbd
-  /usr/share/gok/ka/valuator.kbd
-  /usr/share/gok/kn/gok-controls.kbd
-  /usr/share/gok/kn/hide.kbd
-  /usr/share/gok/kn/launcher.kbd
-  /usr/share/gok/kn/main.kbd
-  /usr/share/gok/kn/mouse.kbd
-  /usr/share/gok/kn/move-resize.kbd
-  /usr/share/gok/kn/numberpad.kbd
-  /usr/share/gok/kn/quit.kbd
-  /usr/share/gok/kn/text-operations.kbd
-  /usr/share/gok/kn/valuator.kbd
-  /usr/share/gok/ko/gok-controls.kbd
-  /usr/share/gok/ko/hide.kbd
-  /usr/share/gok/ko/launcher.kbd
-  /usr/share/gok/ko/main.kbd
-  /usr/share/gok/ko/mouse.kbd
-  /usr/share/gok/ko/move-resize.kbd
-  /usr/share/gok/ko/numberpad.kbd
-  /usr/share/gok/ko/quit.kbd
-  /usr/share/gok/ko/text-operations.kbd
-  /usr/share/gok/ko/valuator.kbd
-  /usr/share/gok/ku/gok-controls.kbd
-  /usr/share/gok/ku/hide.kbd
-  /usr/share/gok/ku/launcher.kbd
-  /usr/share/gok/ku/main.kbd
-  /usr/share/gok/ku/mouse.kbd
-  /usr/share/gok/ku/move-resize.kbd
-  /usr/share/gok/ku/numberpad.kbd
-  /usr/share/gok/ku/quit.kbd
-  /usr/share/gok/ku/text-operations.kbd
-  /usr/share/gok/ku/valuator.kbd
-  /usr/share/gok/latched.png
-  /usr/share/gok/locked.png
-  /usr/share/gok/lt/gok-controls.kbd
-  /usr/share/gok/lt/hide.kbd
-  /usr/share/gok/lt/launcher.kbd
-  /usr/share/gok/lt/main.kbd
-  /usr/share/gok/lt/mouse.kbd
-  /usr/share/gok/lt/move-resize.kbd
-  /usr/share/gok/lt/numberpad.kbd
-  /usr/share/gok/lt/quit.kbd
-  /usr/share/gok/lt/text-operations.kbd
-  /usr/share/gok/lt/valuator.kbd
-  /usr/share/gok/lv/gok-controls.kbd
-  /usr/share/gok/lv/hide.kbd
-  /usr/share/gok/lv/launcher.kbd
-  /usr/share/gok/lv/main.kbd
-  /usr/share/gok/lv/mouse.kbd
-  /usr/share/gok/lv/move-resize.kbd
-  /usr/share/gok/lv/numberpad.kbd
-  /usr/share/gok/lv/quit.kbd
-  /usr/share/gok/lv/text-operations.kbd
-  /usr/share/gok/lv/valuator.kbd
-  /usr/share/gok/mai/gok-controls.kbd
-  /usr/share/gok/mai/hide.kbd
-  /usr/share/gok/mai/launcher.kbd
-  /usr/share/gok/mai/main.kbd
-  /usr/share/gok/mai/mouse.kbd
-  /usr/share/gok/mai/move-resize.kbd
-  /usr/share/gok/mai/numberpad.kbd
-  /usr/share/gok/mai/quit.kbd
-  /usr/share/gok/mai/text-operations.kbd
-  /usr/share/gok/mai/valuator.kbd
-  /usr/share/gok/manage.kbd
-  /usr/share/gok/mk/gok-controls.kbd
-  /usr/share/gok/mk/hide.kbd
-  /usr/share/gok/mk/launcher.kbd
-  /usr/share/gok/mk/main.kbd
-  /usr/share/gok/mk/mouse.kbd
-  /usr/share/gok/mk/move-resize.kbd
-  /usr/share/gok/mk/numberpad.kbd
-  /usr/share/gok/mk/quit.kbd
-  /usr/share/gok/mk/text-operations.kbd
-  /usr/share/gok/mk/valuator.kbd
-  /usr/share/gok/ml/gok-controls.kbd
-  /usr/share/gok/ml/hide.kbd
-  /usr/share/gok/ml/launcher.kbd
-  /usr/share/gok/ml/main.kbd
-  /usr/share/gok/ml/mouse.kbd
-  /usr/share/gok/ml/move-resize.kbd
-  /usr/share/gok/ml/numberpad.kbd
-  /usr/share/gok/ml/quit.kbd
-  /usr/share/gok/ml/text-operations.kbd
-  /usr/share/gok/ml/valuator.kbd
-  /usr/share/gok/mn/gok-controls.kbd
-  /usr/share/gok/mn/hide.kbd
-  /usr/share/gok/mn/launcher.kbd
-  /usr/share/gok/mn/main.kbd
-  /usr/share/gok/mn/mouse.kbd
-  /usr/share/gok/mn/move-resize.kbd
-  /usr/share/gok/mn/numberpad.kbd
-  /usr/share/gok/mn/quit.kbd
-  /usr/share/gok/mn/text-operations.kbd
-  /usr/share/gok/mn/valuator.kbd
-  /usr/share/gok/mr/gok-controls.kbd
-  /usr/share/gok/mr/hide.kbd
-  /usr/share/gok/mr/launcher.kbd
-  /usr/share/gok/mr/main.kbd
-  /usr/share/gok/mr/mouse.kbd
-  /usr/share/gok/mr/move-resize.kbd
-  /usr/share/gok/mr/numberpad.kbd
-  /usr/share/gok/mr/quit.kbd
-  /usr/share/gok/mr/text-operations.kbd
-  /usr/share/gok/mr/valuator.kbd
-  /usr/share/gok/ms/gok-controls.kbd
-  /usr/share/gok/ms/hide.kbd
-  /usr/share/gok/ms/launcher.kbd
-  /usr/share/gok/ms/main.kbd
-  /usr/share/gok/ms/mouse.kbd
-  /usr/share/gok/ms/move-resize.kbd
-  /usr/share/gok/ms/numberpad.kbd
-  /usr/share/gok/ms/quit.kbd
-  /usr/share/gok/ms/text-operations.kbd
-  /usr/share/gok/ms/valuator.kbd
-  /usr/share/gok/nb/gok-controls.kbd
-  /usr/share/gok/nb/hide.kbd
-  /usr/share/gok/nb/launcher.kbd
-  /usr/share/gok/nb/main.kbd
-  /usr/share/gok/nb/mouse.kbd
-  /usr/share/gok/nb/move-resize.kbd
-  /usr/share/gok/nb/numberpad.kbd
-  /usr/share/gok/nb/quit.kbd
-  /usr/share/gok/nb/text-operations.kbd
-  /usr/share/gok/nb/valuator.kbd
-  /usr/share/gok/ne/gok-controls.kbd
-  /usr/share/gok/ne/hide.kbd
-  /usr/share/gok/ne/launcher.kbd
-  /usr/share/gok/ne/main.kbd
-  /usr/share/gok/ne/mouse.kbd
-  /usr/share/gok/ne/move-resize.kbd
-  /usr/share/gok/ne/numberpad.kbd
-  /usr/share/gok/ne/quit.kbd
-  /usr/share/gok/ne/text-operations.kbd
-  /usr/share/gok/ne/valuator.kbd
-  /usr/share/gok/nl/gok-controls.kbd
-  /usr/share/gok/nl/hide.kbd
-  /usr/share/gok/nl/launcher.kbd
-  /usr/share/gok/nl/main.kbd
-  /usr/share/gok/nl/mouse.kbd
-  /usr/share/gok/nl/move-resize.kbd
-  /usr/share/gok/nl/numberpad.kbd
-  /usr/share/gok/nl/quit.kbd
-  /usr/share/gok/nl/text-operations.kbd
-  /usr/share/gok/nl/valuator.kbd
-  /usr/share/gok/nn/gok-controls.kbd
-  /usr/share/gok/nn/hide.kbd
-  /usr/share/gok/nn/launcher.kbd
-  /usr/share/gok/nn/main.kbd
-  /usr/share/gok/nn/mouse.kbd
-  /usr/share/gok/nn/move-resize.kbd
-  /usr/share/gok/nn/numberpad.kbd
-  /usr/share/gok/nn/quit.kbd
-  /usr/share/gok/nn/text-operations.kbd
-  /usr/share/gok/nn/valuator.kbd
-  /usr/share/gok/oc/gok-controls.kbd
-  /usr/share/gok/oc/hide.kbd
-  /usr/share/gok/oc/launcher.kbd
-  /usr/share/gok/oc/main.kbd
-  /usr/share/gok/oc/mouse.kbd
-  /usr/share/gok/oc/move-resize.kbd
-  /usr/share/gok/oc/numberpad.kbd
-  /usr/share/gok/oc/quit.kbd
-  /usr/share/gok/oc/text-operations.kbd
-  /usr/share/gok/oc/valuator.kbd
-  /usr/share/gok/or/gok-controls.kbd
-  /usr/share/gok/or/hide.kbd
-  /usr/share/gok/or/launcher.kbd
-  /usr/share/gok/or/main.kbd
-  /usr/share/gok/or/mouse.kbd
-  /usr/share/gok/or/move-resize.kbd
-  /usr/share/gok/or/numberpad.kbd
-  /usr/share/gok/or/quit.kbd
-  /usr/share/gok/or/text-operations.kbd
-  /usr/share/gok/or/valuator.kbd
-  /usr/share/gok/pa/gok-controls.kbd
-  /usr/share/gok/pa/hide.kbd
-  /usr/share/gok/pa/launcher.kbd
-  /usr/share/gok/pa/main.kbd
-  /usr/share/gok/pa/mouse.kbd
-  /usr/share/gok/pa/move-resize.kbd
-  /usr/share/gok/pa/numberpad.kbd
-  /usr/share/gok/pa/quit.kbd
-  /usr/share/gok/pa/text-operations.kbd
-  /usr/share/gok/pa/valuator.kbd
-  /usr/share/gok/pl/gok-controls.kbd
-  /usr/share/gok/pl/hide.kbd
-  /usr/share/gok/pl/launcher.kbd
-  /usr/share/gok/pl/main.kbd
-  /usr/share/gok/pl/mouse.kbd
-  /usr/share/gok/pl/move-resize.kbd
-  /usr/share/gok/pl/numberpad.kbd
-  /usr/share/gok/pl/quit.kbd
-  /usr/share/gok/pl/text-operations.kbd
-  /usr/share/gok/pl/valuator.kbd
-  /usr/share/gok/pt/gok-controls.kbd
-  /usr/share/gok/pt/hide.kbd
-  /usr/share/gok/pt/launcher.kbd
-  /usr/share/gok/pt/main.kbd
-  /usr/share/gok/pt/mouse.kbd
-  /usr/share/gok/pt/move-resize.kbd
-  /usr/share/gok/pt/numberpad.kbd
-  /usr/share/gok/pt/quit.kbd
-  /usr/share/gok/pt/text-operations.kbd
-  /usr/share/gok/pt/valuator.kbd
-  /usr/share/gok/pt_BR/gok-controls.kbd
-  /usr/share/gok/pt_BR/hide.kbd
-  /usr/share/gok/pt_BR/launcher.kbd
-  /usr/share/gok/pt_BR/main.kbd
-  /usr/share/gok/pt_BR/mouse.kbd
-  /usr/share/gok/pt_BR/move-resize.kbd
-  /usr/share/gok/pt_BR/numberpad.kbd
-  /usr/share/gok/pt_BR/quit.kbd
-  /usr/share/gok/pt_BR/text-operations.kbd
-  /usr/share/gok/pt_BR/valuator.kbd
-  /usr/share/gok/qwerty.kbd
-  /usr/share/gok/ro/gok-controls.kbd
-  /usr/share/gok/ro/hide.kbd
-  /usr/share/gok/ro/launcher.kbd
-  /usr/share/gok/ro/main.kbd
-  /usr/share/gok/ro/mouse.kbd
-  /usr/share/gok/ro/move-resize.kbd
-  /usr/share/gok/ro/numberpad.kbd
-  /usr/share/gok/ro/quit.kbd
-  /usr/share/gok/ro/text-operations.kbd
-  /usr/share/gok/ro/valuator.kbd
-  /usr/share/gok/ru/gok-controls.kbd
-  /usr/share/gok/ru/hide.kbd
-  /usr/share/gok/ru/launcher.kbd
-  /usr/share/gok/ru/main.kbd
-  /usr/share/gok/ru/mouse.kbd
-  /usr/share/gok/ru/move-resize.kbd
-  /usr/share/gok/ru/numberpad.kbd
-  /usr/share/gok/ru/quit.kbd
-  /usr/share/gok/ru/text-operations.kbd
-  /usr/share/gok/ru/valuator.kbd
-  /usr/share/gok/rw/gok-controls.kbd
-  /usr/share/gok/rw/hide.kbd
-  /usr/share/gok/rw/launcher.kbd
-  /usr/share/gok/rw/main.kbd
-  /usr/share/gok/rw/mouse.kbd
-  /usr/share/gok/rw/move-resize.kbd
-  /usr/share/gok/rw/numberpad.kbd
-  /usr/share/gok/rw/quit.kbd
-  /usr/share/gok/rw/text-operations.kbd
-  /usr/share/gok/rw/valuator.kbd
-  /usr/share/gok/si/gok-controls.kbd
-  /usr/share/gok/si/hide.kbd
-  /usr/share/gok/si/launcher.kbd
-  /usr/share/gok/si/main.kbd
-  /usr/share/gok/si/mouse.kbd
-  /usr/share/gok/si/move-resize.kbd
-  /usr/share/gok/si/numberpad.kbd
-  /usr/share/gok/si/quit.kbd
-  /usr/share/gok/si/text-operations.kbd
-  /usr/share/gok/si/valuator.kbd
-  /usr/share/gok/singlekey-automatic-scanning.xam
-  /usr/share/gok/singlekey-inverse-scanning.xam
-  /usr/share/gok/sk/gok-controls.kbd
-  /usr/share/gok/sk/hide.kbd
-  /usr/share/gok/sk/launcher.kbd
-  /usr/share/gok/sk/main.kbd
-  /usr/share/gok/sk/mouse.kbd
-  /usr/share/gok/sk/move-resize.kbd
-  /usr/share/gok/sk/numberpad.kbd
-  /usr/share/gok/sk/quit.kbd
-  /usr/share/gok/sk/text-operations.kbd
-  /usr/share/gok/sk/valuator.kbd
-  /usr/share/gok/sl/gok-controls.kbd
-  /usr/share/gok/sl/hide.kbd
-  /usr/share/gok/sl/launcher.kbd
-  /usr/share/gok/sl/main.kbd
-  /usr/share/gok/sl/mouse.kbd
-  /usr/share/gok/sl/move-resize.kbd
-  /usr/share/gok/sl/numberpad.kbd
-  /usr/share/gok/sl/quit.kbd
-  /usr/share/gok/sl/text-operations.kbd
-  /usr/share/gok/sl/valuator.kbd
-  /usr/share/gok/small-empty.png
-  /usr/share/gok/sq/gok-controls.kbd
-  /usr/share/gok/sq/hide.kbd
-  /usr/share/gok/sq/launcher.kbd
-  /usr/share/gok/sq/main.kbd
-  /usr/share/gok/sq/mouse.kbd
-  /usr/share/gok/sq/move-resize.kbd
-  /usr/share/gok/sq/numberpad.kbd
-  /usr/share/gok/sq/quit.kbd
-  /usr/share/gok/sq/text-operations.kbd
-  /usr/share/gok/sq/valuator.kbd
-  /usr/share/gok/sr/gok-controls.kbd
-  /usr/share/gok/sr/hide.kbd
-  /usr/share/gok/sr/launcher.kbd
-  /usr/share/gok/sr/main.kbd
-  /usr/share/gok/sr/mouse.kbd
-  /usr/share/gok/sr/move-resize.kbd
-  /usr/share/gok/sr/numberpad.kbd
-  /usr/share/gok/sr/quit.kbd
-  /usr/share/gok/sr/text-operations.kbd
-  /usr/share/gok/sr/valuator.kbd
-  /usr/share/gok/sr@latin/gok-controls.kbd
-  /usr/share/gok/sr@latin/hide.kbd
-  /usr/share/gok/sr@latin/launcher.kbd
-  /usr/share/gok/sr@latin/main.kbd
-  /usr/share/gok/sr@latin/mouse.kbd
-  /usr/share/gok/sr@latin/move-resize.kbd
-  /usr/share/gok/sr@latin/numberpad.kbd
-  /usr/share/gok/sr@latin/quit.kbd
-  /usr/share/gok/sr@latin/text-operations.kbd
-  /usr/share/gok/sr@latin/valuator.kbd
-  /usr/share/gok/sv/gok-controls.kbd
-  /usr/share/gok/sv/hide.kbd
-  /usr/share/gok/sv/launcher.kbd
-  /usr/share/gok/sv/main.kbd
-  /usr/share/gok/sv/mouse.kbd
-  /usr/share/gok/sv/move-resize.kbd
-  /usr/share/gok/sv/numberpad.kbd
-  /usr/share/gok/sv/quit.kbd
-  /usr/share/gok/sv/text-operations.kbd
-  /usr/share/gok/sv/valuator.kbd
-  /usr/share/gok/ta/gok-controls.kbd
-  /usr/share/gok/ta/hide.kbd
-  /usr/share/gok/ta/launcher.kbd
-  /usr/share/gok/ta/main.kbd
-  /usr/share/gok/ta/mouse.kbd
-  /usr/share/gok/ta/move-resize.kbd
-  /usr/share/gok/ta/numberpad.kbd
-  /usr/share/gok/ta/quit.kbd
-  /usr/share/gok/ta/text-operations.kbd
-  /usr/share/gok/ta/valuator.kbd
-  /usr/share/gok/te/gok-controls.kbd
-  /usr/share/gok/te/hide.kbd
-  /usr/share/gok/te/launcher.kbd
-  /usr/share/gok/te/main.kbd
-  /usr/share/gok/te/mouse.kbd
-  /usr/share/gok/te/move-resize.kbd
-  /usr/share/gok/te/numberpad.kbd
-  /usr/share/gok/te/quit.kbd
-  /usr/share/gok/te/text-operations.kbd
-  /usr/share/gok/te/valuator.kbd
-  /usr/share/gok/th/gok-controls.kbd
-  /usr/share/gok/th/hide.kbd
-  /usr/share/gok/th/launcher.kbd
-  /usr/share/gok/th/main.kbd
-  /usr/share/gok/th/mouse.kbd
-  /usr/share/gok/th/move-resize.kbd
-  /usr/share/gok/th/numberpad.kbd
-  /usr/share/gok/th/quit.kbd
-  /usr/share/gok/th/text-operations.kbd
-  /usr/share/gok/th/valuator.kbd
-  /usr/share/gok/tr/gok-controls.kbd
-  /usr/share/gok/tr/hide.kbd
-  /usr/share/gok/tr/launcher.kbd
-  /usr/share/gok/tr/main.kbd
-  /usr/share/gok/tr/mouse.kbd
-  /usr/share/gok/tr/move-resize.kbd
-  /usr/share/gok/tr/numberpad.kbd
-  /usr/share/gok/tr/quit.kbd
-  /usr/share/gok/tr/text-operations.kbd
-  /usr/share/gok/tr/valuator.kbd
-  /usr/share/gok/uk/gok-controls.kbd
-  /usr/share/gok/uk/hide.kbd
-  /usr/share/gok/uk/launcher.kbd
-  /usr/share/gok/uk/main.kbd
-  /usr/share/gok/uk/mouse.kbd
-  /usr/share/gok/uk/move-resize.kbd
-  /usr/share/gok/uk/numberpad.kbd
-  /usr/share/gok/uk/quit.kbd
-  /usr/share/gok/uk/text-operations.kbd
-  /usr/share/gok/uk/valuator.kbd
-  /usr/share/gok/value-fast-less.png
-  /usr/share/gok/value-fast-more.png
-  /usr/share/gok/value-less.png
-  /usr/share/gok/value-max.png
-  /usr/share/gok/value-min.png
-  /usr/share/gok/value-more.png
-  /usr/share/gok/vi/gok-controls.kbd
-  /usr/share/gok/vi/hide.kbd
-  /usr/share/gok/vi/launcher.kbd
-  /usr/share/gok/vi/main.kbd
-  /usr/share/gok/vi/mouse.kbd
-  /usr/share/gok/vi/move-resize.kbd
-  /usr/share/gok/vi/numberpad.kbd
-  /usr/share/gok/vi/quit.kbd
-  /usr/share/gok/vi/text-operations.kbd
-  /usr/share/gok/vi/valuator.kbd
-  /usr/share/gok/zh_CN/gok-controls.kbd
-  /usr/share/gok/zh_CN/hide.kbd
-  /usr/share/gok/zh_CN/launcher.kbd
-  /usr/share/gok/zh_CN/main.kbd
-  /usr/share/gok/zh_CN/mouse.kbd
-  /usr/share/gok/zh_CN/move-resize.kbd
-  /usr/share/gok/zh_CN/numberpad.kbd
-  /usr/share/gok/zh_CN/quit.kbd
-  /usr/share/gok/zh_CN/text-operations.kbd
-  /usr/share/gok/zh_CN/valuator.kbd
-  /usr/share/gok/zh_HK/gok-controls.kbd
-  /usr/share/gok/zh_HK/hide.kbd
-  /usr/share/gok/zh_HK/launcher.kbd
-  /usr/share/gok/zh_HK/main.kbd
-  /usr/share/gok/zh_HK/mouse.kbd
-  /usr/share/gok/zh_HK/move-resize.kbd
-  /usr/share/gok/zh_HK/numberpad.kbd
-  /usr/share/gok/zh_HK/quit.kbd
-  /usr/share/gok/zh_HK/text-operations.kbd
-  /usr/share/gok/zh_HK/valuator.kbd
-  /usr/share/gok/zh_TW/gok-controls.kbd
-  /usr/share/gok/zh_TW/hide.kbd
-  /usr/share/gok/zh_TW/launcher.kbd
-  /usr/share/gok/zh_TW/main.kbd
-  /usr/share/gok/zh_TW/mouse.kbd
-  /usr/share/gok/zh_TW/move-resize.kbd
-  /usr/share/gok/zh_TW/numberpad.kbd
-  /usr/share/gok/zh_TW/quit.kbd
-  /usr/share/gok/zh_TW/text-operations.kbd
-  /usr/share/gok/zh_TW/valuator.kbd
-  /usr/share/gtk-doc/html/gok/ch01.html
-  /usr/share/gtk-doc/html/gok/ch02.html
-  /usr/share/gtk-doc/html/gok/ch03.html
-  /usr/share/gtk-doc/html/gok/ch04.html
-  /usr/share/gtk-doc/html/gok/gok-arraylist.html
-  /usr/share/gtk-doc/html/gok/gok-callbacks.html
-  /usr/share/gtk-doc/html/gok/gok-command-common.html
-  /usr/share/gtk-doc/html/gok/gok-command-edge-data.html
-  /usr/share/gtk-doc/html/gok/gok-command-edge.html
-  /usr/share/gtk-doc/html/gok/gok-command-graph.html
-  /usr/share/gtk-doc/html/gok/gok-command-predictor.html
-  /usr/share/gtk-doc/html/gok/gok-command-vertex-data.html
-  /usr/share/gtk-doc/html/gok/gok-command-vertex.html
-  /usr/share/gtk-doc/html/gok/gok-global.html
-  /usr/share/gtk-doc/html/gok/gok-gok-action.html
-  /usr/share/gtk-doc/html/gok/gok-gok-branchback-stack.html
-  /usr/share/gtk-doc/html/gok/gok-gok-chunker.html
-  /usr/share/gtk-doc/html/gok/gok-gok-control.html
-  /usr/share/gtk-doc/html/gok/gok-gok-data.html
-  /usr/share/gtk-doc/html/gok/gok-gok-editor.html
-  /usr/share/gtk-doc/html/gok/gok-gok-feedback.html
-  /usr/share/gtk-doc/html/gok/gok-gok-gconf.html
-  /usr/share/gtk-doc/html/gok/gok-gok-key.html
-  /usr/share/gtk-doc/html/gok/gok-gok-keyboard.html
-  /usr/share/gtk-doc/html/gok/gok-gok-keyslotter.html
-  /usr/share/gtk-doc/html/gok/gok-gok-log-priv.html
-  /usr/share/gtk-doc/html/gok/gok-gok-log-reader.html
-  /usr/share/gtk-doc/html/gok/gok-gok-log.html
-  /usr/share/gtk-doc/html/gok/gok-gok-modifier.html
-  /usr/share/gtk-doc/html/gok/gok-gok-output.html
-  /usr/share/gtk-doc/html/gok/gok-gok-page-accessmethod.html
-  /usr/share/gtk-doc/html/gok/gok-gok-page-actions.html
-  /usr/share/gtk-doc/html/gok/gok-gok-page-feedbacks.html
-  /usr/share/gtk-doc/html/gok/gok-gok-page-keysizespace.html
-  /usr/share/gtk-doc/html/gok/gok-gok-page-wordcomplete.html
-  /usr/share/gtk-doc/html/gok/gok-gok-predictor.html
-  /usr/share/gtk-doc/html/gok/gok-gok-scanner.html
-  /usr/share/gtk-doc/html/gok/gok-gok-settings-dialog.html
-  /usr/share/gtk-doc/html/gok/gok-gok-sound.html
-  /usr/share/gtk-doc/html/gok/gok-gok-spy-priv.html
-  /usr/share/gtk-doc/html/gok/gok-gok-spy.html
-  /usr/share/gtk-doc/html/gok/gok-gok-word-complete.html
-  /usr/share/gtk-doc/html/gok/gok-gok.html
-  /usr/share/gtk-doc/html/gok/gok-gtkjoyswitch.html
-  /usr/share/gtk-doc/html/gok/gok-interface.html
-  /usr/share/gtk-doc/html/gok/gok-main.html
-  /usr/share/gtk-doc/html/gok/gok-support.html
-  /usr/share/gtk-doc/html/gok/gok-switchapi.html
-  /usr/share/gtk-doc/html/gok/gok-word-complete.html
-  /usr/share/gtk-doc/html/gok/gok.devhelp
-  /usr/share/gtk-doc/html/gok/gok.devhelp2
-  /usr/share/gtk-doc/html/gok/home.png
-  /usr/share/gtk-doc/html/gok/index.html
-  /usr/share/gtk-doc/html/gok/index.sgml
-  /usr/share/gtk-doc/html/gok/left.png
-  /usr/share/gtk-doc/html/gok/right.png
-  /usr/share/gtk-doc/html/gok/style.css
-  /usr/share/gtk-doc/html/gok/up.png
-  /usr/share/icons/hicolor/48x48/apps/gok.png
-  /usr/share/locale/am/LC_MESSAGES/gok.mo
-  /usr/share/locale/ang/LC_MESSAGES/gok.mo
-  /usr/share/locale/ar/LC_MESSAGES/gok.mo
-  /usr/share/locale/as/LC_MESSAGES/gok.mo
-  /usr/share/locale/az/LC_MESSAGES/gok.mo
-  /usr/share/locale/be/LC_MESSAGES/gok.mo
-  /usr/share/locale/bg/LC_MESSAGES/gok.mo
-  /usr/share/locale/bn/LC_MESSAGES/gok.mo
-  /usr/share/locale/bn_IN/LC_MESSAGES/gok.mo
-  /usr/share/locale/ca/LC_MESSAGES/gok.mo
-  /usr/share/locale/cs/LC_MESSAGES/gok.mo
-  /usr/share/locale/cy/LC_MESSAGES/gok.mo
-  /usr/share/locale/da/LC_MESSAGES/gok.mo
-  /usr/share/locale/de/LC_MESSAGES/gok.mo
-  /usr/share/locale/dz/LC_MESSAGES/gok.mo
-  /usr/share/locale/el/LC_MESSAGES/gok.mo
-  /usr/share/locale/en_CA/LC_MESSAGES/gok.mo
-  /usr/share/locale/en_GB/LC_MESSAGES/gok.mo
-  /usr/share/locale/es/LC_MESSAGES/gok.mo
-  /usr/share/locale/et/LC_MESSAGES/gok.mo
-  /usr/share/locale/eu/LC_MESSAGES/gok.mo
-  /usr/share/locale/fa/LC_MESSAGES/gok.mo
-  /usr/share/locale/fi/LC_MESSAGES/gok.mo
-  /usr/share/locale/fr/LC_MESSAGES/gok.mo
-  /usr/share/locale/ga/LC_MESSAGES/gok.mo
-  /usr/share/locale/gl/LC_MESSAGES/gok.mo
-  /usr/share/locale/gu/LC_MESSAGES/gok.mo
-  /usr/share/locale/he/LC_MESSAGES/gok.mo
-  /usr/share/locale/hi/LC_MESSAGES/gok.mo
-  /usr/share/locale/hr/LC_MESSAGES/gok.mo
-  /usr/share/locale/hu/LC_MESSAGES/gok.mo
-  /usr/share/locale/id/LC_MESSAGES/gok.mo
-  /usr/share/locale/it/LC_MESSAGES/gok.mo
-  /usr/share/locale/ja/LC_MESSAGES/gok.mo
-  /usr/share/locale/ka/LC_MESSAGES/gok.mo
-  /usr/share/locale/kn/LC_MESSAGES/gok.mo
-  /usr/share/locale/ko/LC_MESSAGES/gok.mo
-  /usr/share/locale/ku/LC_MESSAGES/gok.mo
-  /usr/share/locale/lt/LC_MESSAGES/gok.mo
-  /usr/share/locale/lv/LC_MESSAGES/gok.mo
-  /usr/share/locale/mai/LC_MESSAGES/gok.mo
-  /usr/share/locale/mk/LC_MESSAGES/gok.mo
-  /usr/share/locale/ml/LC_MESSAGES/gok.mo
-  /usr/share/locale/mn/LC_MESSAGES/gok.mo
-  /usr/share/locale/mr/LC_MESSAGES/gok.mo
-  /usr/share/locale/ms/LC_MESSAGES/gok.mo
-  /usr/share/locale/nb/LC_MESSAGES/gok.mo
-  /usr/share/locale/ne/LC_MESSAGES/gok.mo
-  /usr/share/locale/nl/LC_MESSAGES/gok.mo
-  /usr/share/locale/nn/LC_MESSAGES/gok.mo
-  /usr/share/locale/oc/LC_MESSAGES/gok.mo
-  /usr/share/locale/or/LC_MESSAGES/gok.mo
-  /usr/share/locale/pa/LC_MESSAGES/gok.mo
-  /usr/share/locale/pl/LC_MESSAGES/gok.mo
-  /usr/share/locale/pt/LC_MESSAGES/gok.mo
-  /usr/share/locale/pt_BR/LC_MESSAGES/gok.mo
-  /usr/share/locale/ro/LC_MESSAGES/gok.mo
-  /usr/share/locale/ru/LC_MESSAGES/gok.mo
-  /usr/share/locale/rw/LC_MESSAGES/gok.mo
-  /usr/share/locale/si/LC_MESSAGES/gok.mo
-  /usr/share/locale/sk/LC_MESSAGES/gok.mo
-  /usr/share/locale/sl/LC_MESSAGES/gok.mo
-  /usr/share/locale/sq/LC_MESSAGES/gok.mo
-  /usr/share/locale/sr/LC_MESSAGES/gok.mo
-  /usr/share/locale/sr@latin/LC_MESSAGES/gok.mo
-  /usr/share/locale/sv/LC_MESSAGES/gok.mo
-  /usr/share/locale/ta/LC_MESSAGES/gok.mo
-  /usr/share/locale/te/LC_MESSAGES/gok.mo
-  /usr/share/locale/th/LC_MESSAGES/gok.mo
-  /usr/share/locale/tr/LC_MESSAGES/gok.mo
-  /usr/share/locale/uk/LC_MESSAGES/gok.mo
-  /usr/share/locale/vi/LC_MESSAGES/gok.mo
-  /usr/share/locale/zh_CN/LC_MESSAGES/gok.mo
-  /usr/share/locale/zh_HK/LC_MESSAGES/gok.mo
-  /usr/share/locale/zh_TW/LC_MESSAGES/gok.mo
-  /usr/share/omf/gok/gok-C.omf
-  /usr/share/pixmaps/gok.png
-
-------------------
-
 Port Notes:
+
+----- version 2.28.1-1 -----
+Version bump for GNOME 2.28.
 
 ----- version 2.26.0-1 -----
 Initial release of GNOME 2.26 for Cygwin 1.7.
